Added MSA optimized fdct functions 1. fdct_islow_msa, 2.fdct_ifast_msa Signed-off-by: Vikram Dattu <vikram.dattu@imgtec.com>

--- a/simd/Makefile.am
+++ b/simd/Makefile.am
@@ -73,7 +73,7 @@ endif
 
 if SIMD_MSA
 
-libsimd_la_SOURCES = jsimd_msa.c jidct_msa.c
+libsimd_la_SOURCES = jsimd_msa.c jfdct_msa.c jidct_msa.c
 
 endif
 
