--- a/simd/Makefile.am
+++ b/simd/Makefile.am
@@ -75,7 +75,7 @@ if SIMD_MSA
 
 libsimd_la_SOURCES = jsimd_msa.c jfdct_msa.c jidct_msa.c jdsample_msa.c \
 	jdcolext_msa.c jccolext_msa.c jquanti_msa.c jdmrgext_msa.c jcsample_msa.c \
-	jcgray_msa.c
+	jcgray_msa.c jdcol565_msa.c
 
 endif
 
